@@ -17,6 +17,8 @@
 * Images can now be opened with GeoTag.  You can select one or more images in
   finder and then right click and select the "Open With" option.  GeoTag will
   be one of app choices.
+* Images can be selected and the map can be panned/zoomed while saving images.
+  Images locations can not be edited until the save is complete.
 * (internal) Swift 4.2, Xcode 10 (beta 4)
 
 ### Bug fixes
@@ -26,6 +28,8 @@
   image to its "no location assigned" state.
 * undoing all actions did not clear the window modified flag causing a "please
   save" message when window was closed/application terminated.
+* No more beachball when saving large number of images.  Multiple images
+  are saved in parallel, but the save process can still be quite slow.
 
 ### Other 4.x Features and bug fixes
 
